# actix-forum

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
src/: db_pool.rs  lib.rs  main.rs  modules.rs  schema.rs
src/migrations/2023-05-07-214316_create_forums/: down.sql  up.sql
src/migrations/2023-06-17-135934_create_threads/: up.sql
src/migrations/2023-06-17-135955_create_posts/: up.sql
src/modules/: utils.rs
src/modules/forum/: models.rs  service.rs  utils.rs
src/modules/post/: mod.rs  models.rs  service.rs  utils.rs
src/modules/thread/: mod.rs  models.rs  service.rs  utils.rs
