[package]
name = "actix-forum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
log = "0.4.17"
env_logger = "0.10.0"
serde = { version = "1.0.160", features = ["derive"] }
